--- a/PlaystationDiscord/SignIn.xaml
+++ b/PlaystationDiscord/SignIn.xaml
@@ -1,17 +1,16 @@
-﻿<Window x:Class="PlaystationDiscord.MainWindow"
+﻿<Window x:Class="PlaystationDiscord.SignIn"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PlaystationDiscord"
         mc:Ignorable="d"
-        Title="MainWindow" Closing="Window_Closing" Height="450" Width="800">
-    <Grid>
+        Title="Login to PSN" Height="511.111" Width="519.444">
+    <Grid Margin="0,0,292,-3">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="139*"/>
-            <ColumnDefinition Width="257*"/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Button Content="Sign In" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="92,61,0,0" Click="Button_Click"/>
+        <WebBrowser LoadCompleted="browser_LoadCompleted" Name="browser" HorizontalAlignment="Left" Height="473" VerticalAlignment="Top" Width="490" Margin="10,0,-281,0"/>
 
     </Grid>
 </Window>
