--- a/PlaystationDiscord/MainWindow.xaml
+++ b/PlaystationDiscord/MainWindow.xaml
@@ -11,7 +11,7 @@
             <ColumnDefinition Width="139*"/>
             <ColumnDefinition Width="257*"/>
         </Grid.ColumnDefinitions>
-        <Button Content="Sign In" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="92,61,0,0" Click="Button_Click"/>
+        <Button Content="Sign In" Name="btnSignIn" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="92,61,0,0" Click="Button_Click"/>
 
     </Grid>
 </Window>
