--- a/PlaystationDiscord/MainWindow.xaml
+++ b/PlaystationDiscord/MainWindow.xaml
@@ -1,9 +1,10 @@
-﻿<Window x:Class="PlaystationDiscord.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PlaystationDiscord"
+        xmlns:ToggleSwitch="clr-namespace:ToggleSwitch;assembly=ToggleSwitch" x:Class="PlaystationDiscord.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Closing="Window_Closing" Height="450" Width="800">
     <Grid>
@@ -11,7 +12,12 @@
             <ColumnDefinition Width="139*"/>
             <ColumnDefinition Width="257*"/>
         </Grid.ColumnDefinitions>
-        <Button Content="Sign In" Name="btnSignIn" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="92,61,0,0" Click="Button_Click"/>
+        <Button Content="Sign In" x:Name="btnSignIn" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="25,16,0,0" Click="Button_Click"/>
+        <Label Content="Label" Height="Auto" x:Name="lblWelcome" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,10,0,0" Width="Auto"/>
+        <Image HorizontalAlignment="Left" x:Name="imgAvatar" Height="160" VerticalAlignment="Top" Width="160" Margin="25,41,0,0"/>
+
+        <ToggleSwitch:ToggleSwitch Name="togEnableRP" IsOn="True"  HorizontalAlignment="Left" Height="34" VerticalAlignment="Top" Width="56" Margin="212,41,0,0" PreviewMouseUp="togEnableRP_PreviewMouseUp"/>
+        <Label Content="Enable Rich Presence" HorizontalAlignment="Left" Margin="273,45,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.553,0.115" Grid.ColumnSpan="2"/>
 
     </Grid>
 </Window>
