--- a/PlaystationDiscord/MainWindow.xaml
+++ b/PlaystationDiscord/MainWindow.xaml
@@ -6,18 +6,13 @@
         xmlns:local="clr-namespace:PlaystationDiscord"
         xmlns:ToggleSwitch="clr-namespace:ToggleSwitch;assembly=ToggleSwitch" x:Class="PlaystationDiscord.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Closing="Window_Closing" Height="450" Width="800">
+        Title="Discord Rich Presence for PlayStation 4" Closing="Window_Closing" MinHeight="267" MinWidth="429" Height="267" Width="429" StateChanged="Window_StateChanged">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="139*"/>
-            <ColumnDefinition Width="257*"/>
-        </Grid.ColumnDefinitions>
-        <Button Content="Sign In" x:Name="btnSignIn" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="25,16,0,0" Click="Button_Click"/>
-        <Label Content="Label" Height="Auto" x:Name="lblWelcome" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,10,0,0" Width="Auto"/>
+        <Button Content="Sign In with PlayStation" x:Name="btnSignIn" HorizontalAlignment="Left" VerticalAlignment="Top" Width="160" Margin="25,16,0,0" Click="Button_Click" Height="25"/>
+        <Label Content="Label" Height="26" x:Name="lblWelcome" VerticalAlignment="Top" Margin="25,10,22,0"/>
         <Image HorizontalAlignment="Left" x:Name="imgAvatar" Height="160" VerticalAlignment="Top" Width="160" Margin="25,41,0,0"/>
 
-        <ToggleSwitch:ToggleSwitch Name="togEnableRP" IsOn="True"  HorizontalAlignment="Left" Height="34" VerticalAlignment="Top" Width="56" Margin="212,41,0,0" PreviewMouseUp="togEnableRP_PreviewMouseUp"/>
-        <Label Name="lblEnableRP" Content="Enable Rich Presence" HorizontalAlignment="Left" Margin="273,45,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.553,0.115" Grid.ColumnSpan="2"/>
-
+        <ToggleSwitch:ToggleSwitch Name="togEnableRP" IsOn="True"  HorizontalAlignment="Left" Height="34" VerticalAlignment="Top" Width="56" Margin="200,61,0,0" PreviewMouseUp="togEnableRP_PreviewMouseUp"/>
+        <Label Name="lblEnableRP" Content="Enable Rich Presence" Margin="256,65,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.553,0.115" Height="26" HorizontalAlignment="Left" Width="122"/>
     </Grid>
 </Window>
