--- a/PlaystationDiscord/App.xaml
+++ b/PlaystationDiscord/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="PlaystationDiscord.App"
+﻿<Application x:Class="PlayStationDiscord.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PlaystationDiscord"
+             xmlns:local="clr-namespace:PlayStationDiscord"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
