Minor visual fixes, mobile responsiveness, formatting

--- a/assets/_theme.scss
+++ b/assets/_theme.scss
@@ -10,3 +10,11 @@ $whitespace-secondary: #23272a;
 // Theme
 $blurple: #7289da;
 $blurple-hover: #667bc4;
+
+// Shadows
+$boxshadow-1: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+$boxshadow-2: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+$boxshadow-3: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+$boxshadow-4: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+$boxshadow-5: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+$boxshadow-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
