--- a/assets/_theme.scss
+++ b/assets/_theme.scss
@@ -7,8 +7,8 @@ $text-secondary: rgba(255, 255, 255, 0.54);
 
 // Title bar
 $title-bar-background: #1a1a1a;
-$title-bar-control-minimize: #bdc3c7;
-$title-bar-control-maximize: #bdc3c7;
+$title-bar-control-minimize: #4d4d4d;
+$title-bar-control-maximize: #4d4d4d;
 $title-bar-control-close: #d64541;
 $title-bar-title-color: #fff;
 
