--- a/assets/app.scss
+++ b/assets/app.scss
@@ -14,8 +14,9 @@
 body {
 	background: $whitespace-secondary url("./images/background.png") repeat-y;
 	background-size: 100%;
-	display: flex;
-	flex-direction: column;
+	color: $text-primary;
+	// display: flex;
+	// flex-direction: column;
 	min-height: 100vh;
 	
 	header {
@@ -43,6 +44,7 @@ body {
 			position: absolute;
 			top: 0;
 			bottom: 0;
+			padding-left: 5px;
 			margin: auto;
 			color: $title-bar-title-color;
 			font-size: 14px;
@@ -70,6 +72,7 @@ body {
 				align-items: center;
 				width: 100%;
 				height: 100%;
+				transition: all 0.35s cubic-bezier(0.25, 0.25, 0.315, 1.35);
 			}
 
 			#minimize {
@@ -98,9 +101,24 @@ body {
 				grid-column: 3;
 
 				&:hover {
-					background-color: $title-bar-control-close;
+			        background-color: $title-bar-control-close;
+			        box-shadow: rgba(0, 0, 0, 0.5) 0px 2px 6px 0px;
 				}
 			}
+		}
+	}
+
+	main {
+		display: flex;
+		flex-direction: row;
+		img#avatar {
+			width: 200px;
+			height: 200px;
+			pointer-events: none;
+		}
+		p#state {
+			color: $text-secondary;
+			font-size: 8px;
 		}
 	}
 }
