--- a/assets/_button.scss
+++ b/assets/_button.scss
@@ -1,37 +1,34 @@
-$light-blue-btn: #2196f3;
-$red-btn: #d64541;
+@import "_theme";
 
 button {
-	border: none;
-	border-radius: 2px;
-	padding: 12px 18px;
-	font-size: 16px;
-	text-transform: uppercase;
-	cursor: pointer;
-	color: white;
-	box-shadow: 0 0 4px #999;
-	outline: none;
+    height: 45px;
+    cursor: pointer;
+    border: none;
+    border-radius: 3px;
+    outline: none;
+    font-size: 15px;
+    line-height: 45px;
+    background-color: $blurple;
+    color: #fff;
+    transition: all 0.35s cubic-bezier(0.25, 0.25, 0.315, 1.35);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 6px 0px;
 
-	&.ripple {
-		background-position: center;
-		transition: background 0.8s;
-	}
+    &.ripple {
+        background-position: center;
+        transition: background 0.8s;
+    }
 
-	&.ripple:hover {
-		background: #47a7f5 radial-gradient(circle, transparent 1%, #47a7f5 1%) center/15000%;
-	}
+    &.ripple:hover {
+        background: $blurple-hover radial-gradient(circle, transparent 1%, $blurple-hover 1%) center/15000%;
+    }
 
-	&.ripple:active {
-		background-color: #6eb9f7;
-		background-size: 100%;
-		transition: background 0s;
-	}
+    &.ripple:active {
+        background-color: $blurple-active;
+        background-size: 100%;
+        transition: background 0s;
+    }
 
-	&.light-blue {
-		background-color: $light-blue-btn;
-	}
-
-	&.red {
-		background-color: $red-btn;
-	}
+    &.red {
+        background-color: $red-btn;
+    }
 }
