--- a/assets/_theme.scss
+++ b/assets/_theme.scss
@@ -19,6 +19,8 @@ $whitespace-secondary: #23272a;
 // Theme
 $blurple: #7289da;
 $blurple-hover: #667bc4;
+$blurple-active: #8095de;
+$red-btn: #f04747;
 
 // Shadows
 $boxshadow-1: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
