--- a/assets/app.scss
+++ b/assets/app.scss
@@ -1,151 +1,162 @@
-@import '_theme';
-@import '_button';
+@import "_theme";
+@import "_button";
 @import "../node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
 @import "../node_modules/@fortawesome/fontawesome-free/scss/regular";
 @import "../node_modules/@fortawesome/fontawesome-free/scss/solid";
 
 * {
-	margin: 0;
-	max-width: 100%;
-	font-family: $font-stack;
-	overflow-y: hidden;
-	// overflow-x: hidden;
+    margin: 0;
+    max-width: 100%;
+    overflow-y: hidden;
+    font-family: $font-stack;
 }
 
 body {
-	background: $whitespace-secondary url("./images/background.png") repeat-y;
-	background-size: 100%;
-	color: $text-primary;
-	// display: flex;
-	// flex-direction: column;
-	min-height: 100vh;
-	
-	header {
-		display: block;
-		position: relative;
-		height: 30px;
-		background-color: $title-bar-background !important;
-		padding: 4px;
-		z-index: 69;
+    min-height: 100vh;
+    background: url("./images/background.png") no-repeat;
+    background-size: 100%;
+    color: $text-primary;
 
-		#drag-region {
-			width: 100%;
-			height: 100%;
-			-webkit-app-region: drag;
-			display: grid;
-			grid-template-columns: auto 138px;
-		}
+    header {
+        position: relative;
+        height: 31px;
+        z-index: 69;
+        padding: 0 4px;
+        background-color: $title-bar-background;
 
-		#title {
-			grid-column: 1;
-			display: flex;
-			align-items: center;
-			margin-left: 8px;
-			height: 15px;
-			position: absolute;
-			top: 0;
-			bottom: 0;
-			padding-left: 5px;
-			margin: auto;
-			color: $title-bar-title-color;
-			font-size: 14px;
-		}
+        #drag-region {
+            display: grid;
+            grid-template-columns: auto 138px;
+            width: 100%;
+            height: 100%;
+            -webkit-app-region: drag;
+        }
 
-		#controls {
-			display: grid;
-			grid-template-columns: repeat(3, 46px);
-			position: absolute;
-			top: 0;
-			right: 0;
-			height: 100%;
-			-webkit-app-region: no-drag;
-			font-size: .675rem !important;
+        #title {
+            display: flex;
+            grid-row: 1;
+            grid-column: 1;
+            height: 15px;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            align-items: center;
+            font-size: 12px;
+            color: $title-bar-title-color;
+        }
 
-			i:hover {
-				cursor: pointer;
-				color: #fff;
-			}
+        #controls {
+            display: grid;
+            grid-template-columns: repeat(3, 46px);
+            position: absolute;
+            top: 0;
+            right: 0;
+            height: 100%;
+            font-size: 10px;
+            -webkit-app-region: no-drag;
 
-			.control {
-				grid-row: 1 / span 1;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				width: 100%;
-				height: 100%;
-				transition: all 0.35s cubic-bezier(0.25, 0.25, 0.315, 1.35);
-			}
+            i:hover {
+                cursor: pointer;
+                color: #fff;
+            }
 
-			#minimize {
-				@extend .control;
+            .control {
+                display: flex;
+                grid-row: 1 / span 1;
+                width: 100%;
+                height: 100%;
+                justify-content: center;
+                align-items: center;
+                transition: all 0.35s cubic-bezier(0.25, 0.25, 0.315, 1.35);
+            }
 
-				grid-column: 1;
+            #minimize,
+            #maximize,
+            #close {
+                @extend .control;
 
-				&:hover {
-					background-color: $title-bar-control-minimize;
-				}
-			}
+                grid-row: 1;
+            }
 
-			#maximize {
-				@extend .control;
+            #minimize {
+                grid-column: 1;
 
-				grid-column: 2;
+                &:hover {
+                    background-color: $title-bar-control-minimize;
+                }
+            }
 
-				&:hover {
-					background-color: $title-bar-control-maximize;
-				}
-			}
+            #maximize {
+                grid-column: 2;
 
-			#close {
-				@extend .control;
+                &:hover {
+                    background-color: $title-bar-control-maximize;
+                }
+            }
 
-				grid-column: 3;
+            #close {
+                grid-column: 3;
 
-				&:hover {
-			        background-color: $title-bar-control-close;
-			        box-shadow: rgba(0, 0, 0, 0.5) 0px 2px 6px 0px;
-				}
-			}
-		}
-	}
+                &:hover {
+                    background-color: $title-bar-control-close;
+                    box-shadow: rgba(0, 0, 0, 0.5) 0px 2px 6px 0px;
+                }
+            }
+        }
+    }
 
-	main {
-		display: flex;
-		flex-direction: column;
-		flex-wrap: nowrap;
-		height: 100%;
-		width: 100%;
-		.playstation-info
-		{
-			flex: 1;
-			display: flex;
+    main {
+        display: grid;
+        height: 100%;
+        width: 100%;
+        justify-content: center;
 
-			img#avatar {
-				width: 200px;
-				height: 200px;
-				pointer-events: none;
-			}
+        .playstation-info {
+            display: grid;
+            grid-row: 2;
+            grid-column: 1;
+            text-align: center;
 
-			.presence-details
-			{
-				flex-direction: column;
+            img#avatar {
+                grid-row: 1;
+                grid-column: 1;
+                width: 200px;
+                height: auto;
+                box-shadow: $boxshadow-1;
+                transition: $boxshadow-transition;
+            }
 
-				p#state {
-					color: $text-secondary;
-					font-size: 8px;
-				}
-			}
-		}
+            img#avatar:hover {
+                box-shadow: $boxshadow-2;
+                transition: $boxshadow-transition;
+            }
 
-		.options
-		{
-			flex: 2;
-			display: flex;
-		}
+            .presence-details {
+                grid-row: 2;
+                grid-column: 1;
 
-	}
+                p#state {
+                    grid-row: 3;
+                    grid-column: 1;
+                    color: $text-secondary;
+                    font-size: 8px;
+                }
+            }
+        }
+
+        .options {
+            grid-row: 3;
+            grid-column: 1;
+            text-align: center;
+        }
+    }
 }
 
-.fa,.fas,.far,.fal,.fab {
-	font-family: "Font Awesome 5 Free";
+.fa,
+.fas,
+.far,
+.fal,
+.fab {
+    font-family: "Font Awesome 5 Free";
 }
