--- a/assets/_theme.scss
+++ b/assets/_theme.scss
@@ -1,4 +1,3 @@
-$fa-font-path: "../node_modules/@fortawesome/fontawesome-free/webFonts" !default;
 @import "./fonts/open-sans";
 
 $font-stack: "Open Sans", "Roboto", sans-serif;
@@ -7,9 +6,8 @@ $text-secondary: rgba(255, 255, 255, 0.54);
 
 // Title bar
 $title-bar-background: #1a1a1a;
-$title-bar-control-minimize: #4d4d4d;
-$title-bar-control-maximize: #4d4d4d;
-$title-bar-control-close: #d64541;
+$title-bar-control-hover: rgba(255, 255, 255, .2);
+$title-bar-control-close: #F44336;
 $title-bar-title-color: #fff;
 
 // Whitespace
@@ -20,7 +18,7 @@ $whitespace-secondary: #23272a;
 $blurple: #7289da;
 $blurple-hover: #667bc4;
 $blurple-active: #8095de;
-$red-btn: #f04747;
+$red-btn: #F44336;
 
 // Shadows
 $boxshadow-1: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
