--- a/assets/app.scss
+++ b/assets/app.scss
@@ -1,8 +1,5 @@
 @import "_theme";
 @import "_button";
-@import "../node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
-@import "../node_modules/@fortawesome/fontawesome-free/scss/regular";
-@import "../node_modules/@fortawesome/fontawesome-free/scss/solid";
 
 * {
     margin: 0;
@@ -18,72 +15,59 @@ body {
     color: $text-primary;
 
     header {
-        position: relative;
-        height: 31px;
+        display: grid;
+        grid-template-columns: 32px auto 138px;
+        position: fixed;
+        width: 100%;
+        height: 32px;
+        line-height: 32px;
         z-index: 69;
-        padding: 0 4px;
         background-color: $title-bar-background;
+        -webkit-app-region: drag;
+        -webkit-user-select: none;
 
-        #drag-region {
-            display: grid;
-            grid-template-columns: auto 138px;
-            width: 100%;
-            height: 100%;
-            -webkit-app-region: drag;
-        }
-
-        #title {
+        #app-icon {
             display: flex;
             grid-row: 1;
             grid-column: 1;
-            height: 15px;
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            margin: auto;
             align-items: center;
+            justify-content: center;
+            -webkit-app-region: no-drag;
+        }
+
+        #title {
+            grid-row: 1;
+            grid-column: 2;
             font-size: 12px;
-            color: $title-bar-title-color;
+            color: #fff;
         }
 
         #controls {
             display: grid;
+            grid-row: 1;
+            grid-column: 3;
             grid-template-columns: repeat(3, 46px);
-            position: absolute;
-            top: 0;
-            right: 0;
-            height: 100%;
-            font-size: 10px;
             -webkit-app-region: no-drag;
-
-            i:hover {
-                cursor: pointer;
-                color: #fff;
-            }
 
             .control {
                 display: flex;
-                grid-row: 1 / span 1;
-                width: 100%;
-                height: 100%;
-                justify-content: center;
                 align-items: center;
+                justify-content: center;
                 transition: all 0.35s cubic-bezier(0.25, 0.25, 0.315, 1.35);
             }
 
-            #minimize,
-            #maximize,
-            #close {
+            #minimize, #maximize, #close {
                 @extend .control;
 
                 grid-row: 1;
+                fill: #fff;
             }
 
             #minimize {
                 grid-column: 1;
 
                 &:hover {
-                    background-color: $title-bar-control-minimize;
+                    background-color: $title-bar-control-hover;
                 }
             }
 
@@ -91,7 +75,7 @@ body {
                 grid-column: 2;
 
                 &:hover {
-                    background-color: $title-bar-control-maximize;
+                    background-color: $title-bar-control-hover;
                 }
             }
 
@@ -103,6 +87,10 @@ body {
                     box-shadow: rgba(0, 0, 0, 0.5) 0px 2px 6px 0px;
                 }
             }
+
+            i:hover {
+                cursor: pointer;
+            }
         }
     }
 
@@ -110,6 +98,7 @@ body {
         display: grid;
         height: 100%;
         width: 100%;
+        margin-top: 32px;
         justify-content: center;
 
         .playstation-info {
@@ -119,20 +108,13 @@ body {
             text-align: center;
 
             img#avatar {
+                display: block;
                 grid-row: 1;
                 grid-column: 1;
                 width: 200px;
                 height: auto;
-                pointer-events: none;
+                margin: 0 auto;
                 user-select: none;
-                user-drag: none; 
-                box-shadow: $boxshadow-1;
-                transition: $boxshadow-transition;
-            }
-
-            img#avatar:hover {
-                box-shadow: $boxshadow-2;
-                transition: $boxshadow-transition;
             }
 
             .presence-details {
@@ -154,12 +136,4 @@ body {
             text-align: center;
         }
     }
-}
-
-.fa,
-.fas,
-.far,
-.fal,
-.fab {
-    font-family: "Font Awesome 5 Free";
 }
