an auto updater that doesnt require me to spend $$$$
eff the certificate authority boys

--- a/assets/_theme.scss
+++ b/assets/_theme.scss
@@ -10,6 +10,9 @@ $title-bar-control-hover: rgba(255, 255, 255, .2);
 $title-bar-control-close: #F44336;
 $title-bar-title-color: #fff;
 
+// Update bar
+$update-bar-background: #202020;
+
 // Whitespace
 $whitespace-primary: #333;
 $whitespace-secondary: #23272a;
