--- a/assets/app.scss
+++ b/assets/app.scss
@@ -133,7 +133,7 @@ body {
                 font-size: 12px;
                 color: rgba(255, 255, 255, .7);
 
-                #install {
+                #install, #notes {
                     cursor: pointer;
                     &:hover {
                         color: #fff;
