--- a/assets/_button.scss
+++ b/assets/_button.scss
@@ -1,36 +1,56 @@
 @import "_theme";
 
 button {
-    height: 45px;
-    cursor: pointer;
+    min-width: 64px;
+    height: 36px;
     border: none;
-    border-radius: 3px;
+    border-radius: 4px;
     outline: none;
-    font-size: 15px;
-    line-height: 45px;
-    background-color: $blurple;
+    cursor: pointer;
+    padding: 0 16px;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 1.25px;
     color: #fff;
-    transition: all 0.35s cubic-bezier(0.25, 0.25, 0.315, 1.35);
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 6px 0px;
+    transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: rgba(13, 13, 13, 0.2) 0px 3px 1px -2px,
+        rgba(13, 13, 13, 0.14) 0px 2px 2px 0px,
+        rgba(13, 13, 13, 0.12) 0px 1px 5px 0px;
 
-    &.ripple {
-        background-position: center;
-        transition: background 0.8s;
+    &:hover {
+        box-shadow: rgba(13, 13, 13, 0.2) 0px 2px 4px -1px,
+            rgba(13, 13, 13, 0.14) 0px 4px 5px 0px,
+            rgba(13, 13, 13, 0.12) 0px 1px 10px 0px;
     }
 
-    &.ripple:hover {
-        background: $blurple-hover radial-gradient(circle, transparent 1%, $blurple-hover 1%) center/15000%;
-        transition: all 0.35s cubic-bezier(0.25, 0.25, 0.315, 1.35);
-        box-shadow: rgba(0, 0, 0, 0.5) 0px 2px 6px 0px;
-    }
-
-    &.ripple:active {
-        background-color: $blurple-active;
-        background-size: 100%;
-        transition: background 0s;
+    &:active {
+        box-shadow: rgba(13, 13, 13, 0.2) 0px 5px 5px -3px,
+            rgba(13, 13, 13, 0.14) 0px 8px 10px 1px,
+            rgba(13, 13, 13, 0.12) 0px 3px 14px 2px;
     }
 
     &.red {
-        background-color: $red-btn !important;
+        background-color: $red-btn;
+
+        &:hover {
+            background-color: $red-btn-hover;
+        }
+
+        &:active {
+            background-color: $red-btn-active;
+        }
+    }
+
+    &.blurple {
+        background-color: $blurple;
+
+        &:hover {
+            background-color: $blurple-hover;
+        }
+
+        &:active {
+            background-color: $blurple-active;
+        }
     }
 }
