--- a/assets/_theme.scss
+++ b/assets/_theme.scss
@@ -1,27 +1,27 @@
-@import "./fonts/open-sans";
-
-$font-stack: "Open Sans", "Roboto", sans-serif;
+// Text
+$font-stack: "Open Sans", sans-serif;
 $text-primary: rgba(255, 255, 255, 0.87);
 $text-secondary: rgba(255, 255, 255, 0.54);
 
 // Title bar
-$title-bar-background: #1a1a1a;
-$title-bar-control-hover: rgba(255, 255, 255, .2);
-$title-bar-control-close: #F44336;
+$title-bar-background: #202225;
+$title-bar-control-hover: rgba(255, 255, 255, 0.2);
+$title-bar-control-active: rgba(255, 255, 255, 0.5);
+$title-bar-control-close: #f44336;
+$title-bar-control-close-active: #ba000d;
 $title-bar-title-color: #fff;
 
-// Update bar
-$update-bar-background: #202020;
-
 // Whitespace
-$whitespace-primary: #333;
-$whitespace-secondary: #23272a;
+$whitespace-primary: #36393f;
+$whitespace-secondary: #2f3136;
 
 // Theme
 $blurple: #7289da;
 $blurple-hover: #667bc4;
 $blurple-active: #8095de;
-$red-btn: #F44336;
+$red-btn: #ef5350;
+$red-btn-hover: #f44336;
+$red-btn-active: #b61827;
 
 // Shadows
 $boxshadow-1: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
