--- a/assets/app.scss
+++ b/assets/app.scss
@@ -1,67 +1,55 @@
+@import "../node_modules/normalize.css/normalize.css";
 @import "_theme";
 @import "_button";
 @import "_checkmark";
 
-* {
-    margin: 0;
-    max-width: 100%;
-    overflow-y: hidden;
-    font-family: $font-stack;
-}
-
 body {
-    min-height: 100vh;
+    font-family: $font-stack;
+    overflow: hidden;
     background: url("../assets/images/background.png") repeat-y;
     background-size: 100%;
-    color: $text-primary;
 
     header {
         display: grid;
         grid-template-columns: 32px auto 138px;
-        position: fixed;
-        width: 100%;
-        height: 32px;
         line-height: 32px;
-        z-index: 69;
         background-color: $title-bar-background;
         -webkit-app-region: drag;
         -webkit-user-select: none;
 
         #app-icon {
             display: flex;
-            grid-row: 1;
-            grid-column: 1;
             align-items: center;
             justify-content: center;
             -webkit-app-region: no-drag;
         }
 
         #title {
-            grid-row: 1;
-            grid-column: 2;
             font-size: 12px;
             color: #fff;
         }
 
         #controls {
             display: grid;
-            grid-row: 1;
-            grid-column: 3;
-            grid-template-columns: repeat(3, 46px);
             -webkit-app-region: no-drag;
 
             .control {
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                transition: all 0.35s cubic-bezier(0.25, 0.25, 0.315, 1.35);
+                transition: all 0.25s cubic-bezier(0.25, 0.25, 0.315, 1.35);
             }
 
-            #minimize, #maximize, #close {
+            #minimize,
+            #maximize,
+            #close {
+                fill: #fff;
+
                 @extend .control;
 
-                grid-row: 1;
-                fill: #fff;
+                &:hover {
+                    cursor: pointer;
+                }
             }
 
             #minimize {
@@ -70,6 +58,10 @@ body {
                 &:hover {
                     background-color: $title-bar-control-hover;
                 }
+
+                &:active {
+                    background-color: $title-bar-control-active;
+                }
             }
 
             #maximize {
@@ -77,6 +69,10 @@ body {
 
                 &:hover {
                     background-color: $title-bar-control-hover;
+                }
+
+                &:active {
+                    background-color: $title-bar-control-active;
                 }
             }
 
@@ -87,39 +83,41 @@ body {
                     background-color: $title-bar-control-close;
                     box-shadow: rgba(0, 0, 0, 0.5) 0px 2px 6px 0px;
                 }
-            }
 
-            i:hover {
-                cursor: pointer;
+                &:active {
+                    background-color: $title-bar-control-close-active;
+                }
             }
         }
     }
 
     main {
-        display: grid;
-        height: 100%;
-        width: 100%;
-        margin-top: 32px;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: -16px;
+        text-align: center;
 
         #update-info {
-            display: grid;
-            grid-template-columns: 32px auto 138px;
-            position: fixed;
-            width: 100%;
+            width: 100vw;
             height: 32px;
-            line-height: 32px;
+            display: grid;
+            grid-template-columns: 32px auto;
+            position: fixed;
+            top: 32px;
             z-index: 69;
-            background-color: $update-bar-background;
+            line-height: 32px;
+            background-color: $whitespace-primary;
             -webkit-user-select: none;
 
             &.fade {
-                -webkit-transition: opacity 5s ease-in-out;
                 opacity: 0;
+                transition: opacity 5s ease-in-out;
             }
 
             #icon {
                 display: flex;
-                grid-row: 1;
                 grid-column: 1;
                 align-items: center;
                 justify-content: center;
@@ -127,13 +125,14 @@ body {
             }
 
             #text {
-                grid-row: 1;
                 grid-column: 2;
                 font-size: 12px;
-                color: rgba(255, 255, 255, .7);
+                color: $text-primary;
 
-                #install, #notes {
+                #install,
+                #notes {
                     cursor: pointer;
+
                     &:hover {
                         color: #fff;
                     }
@@ -142,63 +141,66 @@ body {
         }
 
         .playstation-info {
-            display: grid;
-            grid-row: 2;
-            grid-column: 1;
-            text-align: center;
-
             img#avatar {
-                display: block;
-                grid-row: 1;
-                grid-column: 1;
                 width: 200px;
                 height: auto;
-                margin: 0 auto;
                 user-select: none;
+                border-radius: 3px;
             }
 
             .presence-details {
-                grid-row: 2;
-                grid-column: 1;
+                line-height: 0.5;
 
-                p#state {
-                    grid-row: 3;
-                    grid-column: 1;
-                    color: $text-secondary;
-                    font-size: 8px;
-                }
-            }
-        }
-
-        .options {
-            grid-row: 3;
-            grid-column: 1;
-            text-align: center;
-        }
-
-        footer {
-            grid-row: 4;
-
-            #discord-reconnect {
-                position: absolute;
-                bottom: 0;
-                float: left;
-                color: rgba(255, 255, 255, .7);
-                font-size: 12px;
-                cursor: pointer;
-
-                &:hover {
+                #onlineId {
+                    font-size: 24px;
                     color: #fff;
                 }
 
-                img {
-                    animation-play-state: paused;
-                    vertical-align: middle;
-
-                    &:hover {
-                        animation-play-state: running;
-                    }
+                #details,
+                #state {
+                    font-size: 18px;
                 }
+
+                #details {
+                    color: $text-primary;
+                }
+
+                #state {
+                    color: $text-secondary;
+                }
+            }
+        }
+    }
+
+    #discord-reconnect {
+        width: 100vw;
+        height: 32px;
+        display: grid;
+        grid-template-columns: 32px auto;
+        position: fixed;
+        bottom: 0px;
+        background-color: $whitespace-primary;
+        -webkit-user-select: none;
+
+        &:hover {
+            cursor: pointer;
+        }
+
+        #icon {
+            display: flex;
+            grid-column: 1;
+            align-items: center;
+            justify-content: center;
+            -webkit-app-region: no-drag;
+        }
+
+        #text {
+            grid-column: 2;
+            font-size: 12px;
+            color: $text-primary;
+
+            &:hover {
+                color: #fff;
             }
         }
     }
