--- a/assets/app.scss
+++ b/assets/app.scss
@@ -173,35 +173,37 @@ body {
         }
     }
 
-    #discord-reconnect {
-        width: 100vw;
-        height: 32px;
-        display: grid;
-        grid-template-columns: 32px auto;
-        position: fixed;
-        bottom: 0px;
-        background-color: $whitespace-primary;
-        -webkit-user-select: none;
-
-        &:hover {
-            cursor: pointer;
-        }
-
-        #icon {
-            display: flex;
-            grid-column: 1;
-            align-items: center;
-            justify-content: center;
-            -webkit-app-region: no-drag;
-        }
-
-        #text {
-            grid-column: 2;
-            font-size: 12px;
-            color: $text-primary;
+    footer {
+        #discord-reconnect {
+            width: 100vw;
+            height: 32px;
+            display: grid;
+            grid-template-columns: 32px auto;
+            position: fixed;
+            bottom: 0px;
+            background-color: $whitespace-primary;
+            -webkit-user-select: none;
 
             &:hover {
-                color: #fff;
+                cursor: pointer;
+            }
+
+            #icon {
+                display: flex;
+                grid-column: 1;
+                align-items: center;
+                justify-content: center;
+                -webkit-app-region: no-drag;
+            }
+
+            #text {
+                grid-column: 2;
+                font-size: 12px;
+                color: $text-primary;
+
+                &:hover {
+                    color: #fff;
+                }
             }
         }
     }
