--- a/assets/_theme.scss
+++ b/assets/_theme.scss
@@ -22,6 +22,9 @@ $blurple-active: #8095de;
 $red-btn: #ef5350;
 $red-btn-hover: #f44336;
 $red-btn-active: #b61827;
+$warning-btn: #ffa726;
+$warning-btn-hover: #ff9800;
+$warning-btn-active: #c77800;
 
 // Shadows
 $boxshadow-1: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
