downgrade electron to 4.0.4 to hopefully fix login issues #80, #86

--- a/assets/app.scss
+++ b/assets/app.scss
@@ -209,5 +209,11 @@ body {
                 }
             }
         }
+
+        #options {
+            position: absolute;
+            top: 100%;
+            right: 0%;
+        }
     }
 }
