--- a/src/renderer/styles/_theme.scss
+++ b/src/renderer/styles/_theme.scss
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans&display=swap);
+
 // Text
 $font-stack: "Open Sans", sans-serif;
 $text-primary: rgba(255, 255, 255, 0.87);
