--- a/src/renderer/styles/_button.scss
+++ b/src/renderer/styles/_button.scss
@@ -1,68 +1,92 @@
 @import "_theme";
 
 button {
-    min-width: 64px;
-    height: 36px;
-    border: none;
-    border-radius: 4px;
-    outline: none;
-    cursor: pointer;
-    padding: 0 16px;
-    font-size: 14px;
-    font-weight: 500;
-    text-transform: uppercase;
-    letter-spacing: 1.25px;
-    color: #fff;
-    transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
-    box-shadow: rgba(13, 13, 13, 0.2) 0px 3px 1px -2px,
-        rgba(13, 13, 13, 0.14) 0px 2px 2px 0px,
-        rgba(13, 13, 13, 0.12) 0px 1px 5px 0px;
+  min-width: 64px;
+  height: 36px;
+  border: none;
+  border-radius: 4px;
+  outline: none;
+  cursor: pointer;
+  padding: 0 16px;
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 1.25px;
+  color: #fff;
+  transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: rgba(13, 13, 13, 0.2) 0px 3px 1px -2px,
+    rgba(13, 13, 13, 0.14) 0px 2px 2px 0px,
+    rgba(13, 13, 13, 0.12) 0px 1px 5px 0px;
+
+  &:hover {
+    box-shadow: rgba(13, 13, 13, 0.2) 0px 2px 4px -1px,
+      rgba(13, 13, 13, 0.14) 0px 4px 5px 0px,
+      rgba(13, 13, 13, 0.12) 0px 1px 10px 0px;
+  }
+
+  &:active {
+    box-shadow: rgba(13, 13, 13, 0.2) 0px 5px 5px -3px,
+      rgba(13, 13, 13, 0.14) 0px 8px 10px 1px,
+      rgba(13, 13, 13, 0.12) 0px 3px 14px 2px;
+  }
+
+  &.red {
+    background-color: $red-btn;
 
     &:hover {
-        box-shadow: rgba(13, 13, 13, 0.2) 0px 2px 4px -1px,
-            rgba(13, 13, 13, 0.14) 0px 4px 5px 0px,
-            rgba(13, 13, 13, 0.12) 0px 1px 10px 0px;
+      background-color: $red-btn-hover;
     }
 
     &:active {
-        box-shadow: rgba(13, 13, 13, 0.2) 0px 5px 5px -3px,
-            rgba(13, 13, 13, 0.14) 0px 8px 10px 1px,
-            rgba(13, 13, 13, 0.12) 0px 3px 14px 2px;
+      background-color: $red-btn-active;
+    }
+  }
+
+  &.warning {
+    background-color: $warning-btn;
+
+    &:hover {
+      background-color: $warning-btn-hover;
     }
 
-    &.red {
-        background-color: $red-btn;
+    &:active {
+      background-color: $warning-btn-active;
+    }
+  }
 
-        &:hover {
-            background-color: $red-btn-hover;
-        }
+  &.blurple {
+    background-color: $blurple;
 
-        &:active {
-            background-color: $red-btn-active;
-        }
+    &:hover {
+      background-color: $blurple-hover;
     }
 
-    &.warning {
-        background-color: $warning-btn;
+    &:active {
+      background-color: $blurple-active;
+    }
+  }
 
-        &:hover {
-            background-color: $warning-btn-hover;
-        }
+  &.black {
+    background-color: $black;
 
-        &:active {
-            background-color: $warning-btn-active;
-        }
+    &:hover {
+      background-color: $black-hover;
     }
 
-    &.blurple {
-        background-color: $blurple;
-
-        &:hover {
-            background-color: $blurple-hover;
-        }
-
-        &:active {
-            background-color: $blurple-active;
-        }
+    &:active {
+      background-color: $black-active;
     }
+  }
+
+  &.blue {
+    background-color: $blue;
+
+    &:hover {
+      background-color: $blue-hover;
+    }
+
+    &:active {
+      background-color: $blue-active;
+    }
+  }
 }
