--- a/src/renderer/styles/_theme.scss
+++ b/src/renderer/styles/_theme.scss
@@ -27,6 +27,12 @@ $red-btn-active: #b61827;
 $warning-btn: #ffa726;
 $warning-btn-hover: #ff9800;
 $warning-btn-active: #c77800;
+$black: #262626;
+$black-hover: #424242;
+$black-active: #262626;
+$blue: #003087;
+$blue-hover: #0039a1;
+$blue-active: #003087;
 
 // Shadows
 $boxshadow-1: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
