--- a/assets/index.scss
+++ b/assets/index.scss
@@ -112,9 +112,13 @@ body {
     .playstation-4 {
         grid-column: 2;
     }
+    
+    .playstation-5 {
+        grid-column: 3;
+    }
 
     .playstation-vita {
-        grid-column: 3;
+        grid-column: 4;
     }
 }
 
